--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -3,9 +3,11 @@
         <div class="asideTop">
           <h4>{{username}}</h4>
           <div class="avatar">
+           <p>Q</p>
+        <i class="fa fa-camera"></i></div>
           {{!--   <img src="http://placehold.it/100x100"> --}}
-              <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png">
-          </div>
+              {{!-- <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png"> --}}
+
           <div class="score">
             <p>Current score: {{points}}</p>
           </div>
