leaderboard working on main view

--- a/app/templates/leaderboard.hbs
+++ b/app/templates/leaderboard.hbs
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-<p>Your score is now: {{ score }}</p>
+<p>Your score is now: {{ points }}</p>
 
 <div class="keepPlayingDiv">
   <button class="keepPlaying" id="keepPlaying">Keep Playing</button>
