--- a/app/templates/list.hbs
+++ b/app/templates/list.hbs
@@ -1,5 +1,6 @@
+
 <div class="leaderboardSection">
-          <h4>Leaderboard</h4>
+          <h4 class="leaderboardh4">Leaderboard</h4>
           <ul id="leaderboard" class="leaderboard">
           {{#each user}}
             <li>{{username}}: {{points}}</li>
@@ -7,3 +8,7 @@
           {{/each}}
           </ul>
         </div>
+
+<div class="deleteDiv">
+  <button id="#deleteUser">Delete Account</button>
+</div>
