--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -443,14 +443,27 @@ header {
     }
 }
 
-aside {
+.sidebarWrapper {
     @include span-columns(3);
     background-color: $light;
-    height: 100vh;
+    // height: 130vh;
     overflow: hidden;
     clear: both;
     button {
         font-family: $roboto;
+        width: 100%;
+    }
+
+    .leaderboardh4 {
+        background-color: $orange;
+        padding: 20px;
+        font-size: 3em;
+        border-radius: 3px;
+    }
+
+    .leaderboard {
+        padding: 15px;
+        line-height: 2em;
     }
     .innerAside {
         width: 90%;
@@ -464,7 +477,7 @@ aside {
     }
     .asideTop {
         margin-top: 2em;
-        border-bottom: 1px solid $darkblue;
+        // border-bottom: 1px solid $darkblue;
         .avatar {
             margin: 2em;
             img {
