--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -26,7 +26,7 @@
 
 
     <div class="singleGuesses" id="singleGuesses">
-    <p id="seeOldGuesses">See your previous <span>incorrect</span> guesses</p>
+      <p id="seeOldGuesses">Show / hide <span>incorrect</span> guesses</p>
       <ul class="incorrectGuesses" id="incorrectGuesses">
       </ul>
     </div>
