--- a/app/css/main.css
+++ b/app/css/main.css
@@ -115,8 +115,50 @@ header {
 
 /* LOGIN VIEW
 -------------- */
+.login {
+  background-color: #225378;
+  height: 100vh;
+  width: 100%; }
+  .login .loginBox {
+    width: 50%;
+    margin: auto;
+    padding-top: 10em; }
+    .login .loginBox .loginLogo {
+      text-align: center;
+      padding-bottom: 2em; }
+    .login .loginBox h2 {
+      font-family: "Roboto", sans-serif;
+      color: #F3FFE2;
+      font-size: 2.2em;
+      padding: .3em;
+      display: inline-block;
+      float: left;
+      margin-bottom: .3em; }
+    .login .loginBox .formDiv {
+      border: 1px solid #F3FFE2;
+      padding: 2em; }
+      .login .loginBox .formDiv .signUp {
+        color: #ACF0F2;
+        text-decoration: underline;
+        cursor: pointer;
+        display: inline-block;
+        float: right;
+        margin: 0;
+        padding-top: .7em; }
+      .login .loginBox .formDiv input {
+        font-family: "Roboto", sans-serif; }
+      .login .loginBox .formDiv button {
+        font-family: "Roboto", sans-serif; }
+        .login .loginBox .formDiv button:hover {
+          border: #FF8236; }
+    .login .loginBox .registerDiv {
+      overflow: hidden; }
+
 .errormsg p {
   color: #FF8236; }
+
+.hide {
+  display: none; }
 
 /* MAIN PAGE VIEW
 ------------------ */
@@ -299,6 +341,7 @@ header {
       float: right;
       margin-right: 2em; }
     .container .singleMain .singleGuesses {
+      overflow: hidden;
       clear: both; }
       .container .singleMain .singleGuesses p {
         display: block;
@@ -307,7 +350,8 @@ header {
         color: #225378;
         font-family: "Roboto", sans-serif;
         cursor: pointer;
-        margin-left: 1.7em; }
+        margin-left: 1.7em;
+        margin-bottom: 1em; }
         .container .singleMain .singleGuesses p span {
           color: #FF8236; }
         .container .singleMain .singleGuesses p:hover {
@@ -316,22 +360,24 @@ header {
           border: none; }
           .container .singleMain .singleGuesses p:hover span {
             color: #225378; }
-      .container .singleMain .singleGuesses ul {
-        display: block;
+      .container .singleMain .singleGuesses .incorrectGuesses {
+        display: none;
         clear: both;
         text-align: left;
         margin-left: 1em; }
-        .container .singleMain .singleGuesses ul li {
+        .container .singleMain .singleGuesses .incorrectGuesses li {
           color: #225378;
           margin-left: 2.7em;
           padding-top: 1em;
           position: relative; }
-          .container .singleMain .singleGuesses ul li::before {
+          .container .singleMain .singleGuesses .incorrectGuesses li::before {
             content: '\f00d';
             font-family: FontAwesome;
             position: absolute;
             color: #FF8236;
             left: -20px; }
+      .container .singleMain .singleGuesses .show {
+        display: block; }
 
 aside {
   float: left;
