--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -9,7 +9,8 @@
 
         <div class="imageInfo">
           <p>First solved by: <span>{{solved_by}}</span></p>
-          <p>Correct so far: <span>{{solved}}</span></p>
+          <p>Correct so far: <span>{{times_solved}}</span></p>
+          <p>Total Attempts: <span>{{attempts}}</span></p>
           <p>Hint: <span>{{hint}}</span></p>
 
           <!-- would be cool to add div with user's score and addClass show on hover for this information -->
