--- a/app/templates/single.hbs
+++ b/app/templates/single.hbs
@@ -11,7 +11,7 @@
           <p>First solved by: <span>{{solved_by}}</span></p>
           <p>Correct so far: <span>{{times_solved}}</span></p>
           <p>Total Attempts: <span>{{attempts}}</span></p>
-          <p>Hint: <span>{{hint}}</span></p>
+          <p id="hint">Show hint: <span class="hint">{{hint}}</span></p>
 
           <!-- would be cool to add div with user's score and addClass show on hover for this information -->
 
