--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -25,7 +25,7 @@
           </div>
   <div id="databox">
     <p><b>FIRST SOLVED BY: </b>{{ solved_by }}</p>
-    <P><span><b>HINT: </b>{{ hint }}</span></p>
+    {{!-- <P><span><b>HINT: </b>{{ hint }}</span></p> --}}
        </div>
        </div>
 
