Updated avatar image

--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -4,7 +4,7 @@
           <h4>{{username}}</h4>
           <div class="avatar">
           {{!--   <img src="http://placehold.it/100x100"> --}}
-              <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png">
+              <img src="images/q_blue_orange.png">
           </div>
           <div class="score">
             <p>Current score: {{points}}</p>
