--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -82,6 +82,7 @@ header {
             display: inline-block;
             float: left;
             overflow: hidden;
+            cursor: pointer;
             img {
                 height: 70px;
             }
