--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -3,11 +3,20 @@
         <div class="asideTop">
           <h4>{{username}}</h4>
           <div class="avatar">
-           <p>Q</p>
-        <i class="fa fa-camera"></i></div>
+           {{!-- <p>Q</p> --}}
+        {{!-- <i class="fa fa-camera"></i></div> --}}
           {{!--   <img src="http://placehold.it/100x100"> --}}
-              {{!-- <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png"> --}}
+              <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png">
+        <div class="solved">
+        <button id="#solved">View Solutions</button>
+          <ul id="userSolves" class="userSolves">
+{{#each solved}}
+<li data-id="{{ solved }}">
 
+  {{solved}} {{attempts}} {{times_solved}}
+{{/each}}
+</div>
+        </div>
           <div class="score">
             <p>Current score: {{points}}</p>
           </div>
