--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -7,15 +7,15 @@
         {{!-- <i class="fa fa-camera"></i></div> --}}
           {{!--   <img src="http://placehold.it/100x100"> --}}
               <img src="https://raw.githubusercontent.com/TRPMorrison/Qpic/master/Qlogo.png">
-        <div class="solved">
+        {{!-- <div class="solved">
         <button id="#solved">View Solutions</button>
           <ul id="userSolves" class="userSolves">
 {{#each solved}}
 <li data-id="{{ solved }}">
 
   {{solved}} {{attempts}} {{times_solved}}
-{{/each}}
-</div>
+{{/each}} --}}
+{{!-- </div> --}}
         </div>
           <div class="score">
             <p>Current score: {{points}}</p>
