--- a/app/templates/leaderboard.hbs
+++ b/app/templates/leaderboard.hbs
@@ -5,9 +5,10 @@
 
 <div class="singleWrap">
     <div class="singleMain">
-      <i class="fa fa-camera"></i>
-      <p>posted by <span>{{post.owner}}<span></p>
-
+      <div class="leaderBoardTop">
+        <i class="fa fa-camera"></i>
+        <p>posted by <span>{{post.owner}}<span></p>
+      </div>
       <div class="image">
         <img src="{{post.image_url}}">
 
