--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -24,7 +24,7 @@
             <a href="#/single/{{id}}"><img src="{{ image_url }}"></a>
           </div>
   <div id="databox">
-    <p><b>FIRST SOLVED BY: </b>{{ solved_by }}</p>
+    <p><b>FIRST SOLVED BY: </b><span>{{ solved_by }}</span></p>
     {{!-- <P><span><b>HINT: </b>{{ hint }}</span></p> --}}
        </div>
        </div>
